# php-shirabe

./: .gitmodules  Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
crates/shirabe/: Cargo.toml  build.rs
crates/shirabe-php-shim/: Cargo.toml
crates/shirabe-php-shim/src/: apcu.rs  array.rs  compress.rs  curl.rs  datetime.rs  env.rs  exception.rs  filter.rs  fs.rs  hash.rs  json.rs  lib.rs  math.rs  net.rs  openssl.rs  output.rs  phar.rs  preg.rs  process.rs  random.rs  rar.rs  runtime.rs  stream.rs  string.rs  url.rs  var.rs  xml.rs  zip.rs
crates/shirabe/src/: advisory.rs  cache.rs  compiler.rs  composer.rs  config.rs  dependency_resolver.rs  downloader.rs  factory.rs  installed_versions.rs  installer.rs  io.rs  json.rs  lib.rs  main.rs  partial_composer.rs  phpstan.rs  plugin.rs  question.rs  repository.rs  script.rs  util.rs
crates/shirabe/src/advisory/: any_security_advisory.rs  audit_config.rs  auditor.rs  ignored_security_advisory.rs  mod.rs  partial_or_full_security_advisory.rs  partial_security_advisory.rs  security_advisory.rs
crates/shirabe/src/autoload/: autoload_generator.rs  class_loader.rs  class_map_generator.rs  mod.rs
crates/shirabe/src/command/: about_command.rs  archive_command.rs  audit_command.rs  base_command.rs  base_config_command.rs  base_dependency_command.rs  bump_command.rs  check_platform_reqs_command.rs  clear_cache_command.rs  completion_trait.rs  config_command.rs  create_project_command.rs  depends_command.rs  diagnose_command.rs  dump_autoload_command.rs  exec_command.rs  fund_command.rs  global_command.rs  home_command.rs  init_command.rs  install_command.rs  licenses_command.rs  mod.rs  outdated_command.rs  package_discovery_trait.rs  prohibits_command.rs  reinstall_command.rs  remove_command.rs  repository_command.rs  require_command.rs  run_script_command.rs  script_alias_command.rs  search_command.rs  self_update_command.rs  show_command.rs  status_command.rs  suggests_command.rs  update_command.rs  validate_command.rs
crates/shirabe/src/config/: config_source_interface.rs  json_config_source.rs
crates/shirabe/src/console/: application.rs  github_action_error.rs  html_output_formatter.rs  input.rs  mod.rs
crates/shirabe/src/dependency_resolver/: decisions.rs  default_policy.rs  generic_rule.rs  local_repo_transaction.rs  lock_transaction.rs  mod.rs  multi_conflict_rule.rs  policy_interface.rs  pool.rs  pool_builder.rs  pool_optimizer.rs  problem.rs  request.rs  rule.rs  rule2_literals.rs  rule_set.rs  rule_set_generator.rs  rule_set_iterator.rs  rule_watch_chain.rs  rule_watch_graph.rs  rule_watch_node.rs  security_advisory_pool_filter.rs  solver.rs  solver_bug_exception.rs  solver_problems_exception.rs  transaction.rs
crates/shirabe/src/downloader/: archive_downloader.rs  change_report_interface.rs  download_manager.rs  downloader_interface.rs  dvcs_downloader_interface.rs  file_downloader.rs  filesystem_exception.rs  fossil_downloader.rs  git_downloader.rs  gzip_downloader.rs  hg_downloader.rs  max_file_size_exceeded_exception.rs  mod.rs  path_downloader.rs  perforce_downloader.rs  phar_downloader.rs  rar_downloader.rs  svn_downloader.rs  tar_downloader.rs  transport_exception.rs  vcs_capable_downloader_interface.rs  vcs_downloader.rs  xz_downloader.rs  zip_downloader.rs
crates/shirabe/src/event_dispatcher/: event.rs  event_dispatcher.rs  event_subscriber_interface.rs  mod.rs  script_execution_exception.rs
crates/shirabe/src/exception/: irrecoverable_download_exception.rs  mod.rs  no_ssl_exception.rs
crates/shirabe/src/filter/: mod.rs  platform_requirement_filter.rs
crates/shirabe/src/installer/: binary_installer.rs  binary_presence_interface.rs  installation_manager.rs  installer_event.rs  installer_events.rs  installer_interface.rs  library_installer.rs  metapackage_installer.rs  noop_installer.rs  package_event.rs  package_events.rs  plugin_installer.rs  project_installer.rs  suggested_packages_reporter.rs
crates/shirabe/src/io/: base_io.rs  buffer_io.rs  console_io.rs  io_interface.rs  mod.rs  null_io.rs
crates/shirabe/src/json/: json_file.rs  json_formatter.rs  json_grammar.rs  json_manipulator.rs  json_validation_exception.rs  mod.rs
crates/shirabe/src/package/: alias_package.rs  archiver.rs  base_package.rs  comparer.rs  complete_alias_package.rs  complete_package.rs  complete_package_interface.rs  handle.rs  link.rs  locker.rs  mod.rs  package.rs  package_interface.rs  root_alias_package.rs  root_package.rs  root_package_interface.rs  version.rs
crates/shirabe/src/phpstan/: config_return_type_extension.rs  mod.rs  rule_reason_data_return_type_extension.rs
crates/shirabe/src/platform/: hhvm_detector.rs  mod.rs  runtime.rs  version.rs
crates/shirabe/src/plugin/: capability.rs  capable.rs  command_event.rs  mod.rs  plugin_blocked_exception.rs  plugin_events.rs  plugin_interface.rs  plugin_manager.rs  post_file_download_event.rs  pre_command_run_event.rs  pre_file_download_event.rs  pre_pool_create_event.rs
crates/shirabe/src/question/: mod.rs  strict_confirmation_question.rs
crates/shirabe/src/repository/: advisory_provider_interface.rs  array_repository.rs  artifact_repository.rs  canonical_packages_trait.rs  composer_repository.rs  handle.rs  mod.rs  (+26 more)
crates/shirabe/tests/: all_functional_test.rs  application_test.rs  cache_test.rs  cli.rs  completion_functional_test.rs  composer_test.rs  config_test.rs  dbg_test.rs  default_config_test.rs  documentation_test.rs  factory_test.rs  installed_versions_test.rs  installer_test.rs
(+626 files in other folders)
