[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
shirabe-php-shim = { path = "crates/shirabe-php-shim" }
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
indexmap = { version = "2.14.0", features = ["serde"] }
md5 = "0.7.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha1 = "0.10.6"
url = "2.5.8"
