[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
shirabe = { path = "crates/shirabe" }
shirabe-class-map-generator = { path = "crates/shirabe-class-map-generator" }
shirabe-external-packages = { path = "crates/shirabe-external-packages" }
shirabe-metadata-minifier = { path = "crates/shirabe-metadata-minifier" }
shirabe-php-rpc = { path = "crates/shirabe-php-rpc" }
shirabe-php-shim = { path = "crates/shirabe-php-shim" }
shirabe-semver = { path = "crates/shirabe-semver" }
shirabe-spdx-licenses = { path = "crates/shirabe-spdx-licenses" }
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
fastrand = "2.4.1"
futures = "0.3.32"
indexmap = { version = "2.14.0", features = ["serde"] }
jsonschema = { version = "0.46.6", default-features = false }
md5 = "0.7.0"
mockall = "0.14.0"
regex = "1.12.3"
regex-macro = "0.3.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_urlencoded = "0.7.1"
serial_test = "3.5.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
twox-hash = "2.1.2"
url = "2.5.8"
zip = "8.6.0"

[workspace.lints.rust]
async_fn_in_trait = "allow"
dead_code = "allow"
unreachable_code = "allow"
unused_must_use = "allow"
unused_variables = "allow"

[workspace.lints.clippy]
await_holding_refcell_ref = "allow"
diverging_sub_expression = "allow"
if_same_then_else = "allow"
large_enum_variant = "allow"
module_inception = "allow"
type_complexity = "allow"
