[package]
name = "shirabe-php-shim"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fastrand.workspace = true
indexmap.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true

[lints]
workspace = true
