[package]
name = "shirabe"
version.workspace = true
edition.workspace = true

[dependencies]
shirabe-class-map-generator.workspace = true
shirabe-external-packages.workspace = true
shirabe-php-shim.workspace = true
shirabe-semver.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
indexmap.workspace = true
md5.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
url.workspace = true
