[package]
name = "shirabe"
version.workspace = true
edition.workspace = true

[dependencies]
shirabe-class-map-generator.workspace = true
shirabe-external-packages.workspace = true
shirabe-metadata-minifier.workspace = true
shirabe-php-shim.workspace = true
shirabe-semver.workspace = true
shirabe-spdx-licenses.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
indexmap.workspace = true
jsonschema.workspace = true
md5.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
